JumpScript/tests/baselines/reference/anyMappedTypesError.errors.txt
tests/cases/compiler/anyMappedTypesError.jump(1,12): error TS7039: Mapped object type implicitly has an 'any' template type.


==== tests/cases/compiler/anyMappedTypesError.jump (1 errors) ====
    type Foo = {[P in "bar"]};
               ~~~~~~~~~~~~~~
!!! error TS7039: Mapped object type implicitly has an 'any' template type.